--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,22 @@
     "baseUrl": ".",
     "inlineSourceMap": true,
     "inlineSources": true,
-    "module": "ESNext",
-    "target": "ES6",
+    "module": "es2015",
+    "target": "es2017",
     "allowJs": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "isolatedModules": true,
     "lib": [
-      "DOM",
-      "ES5",
-      "ES6",
-      "ES7"
-    ]
+      "dom",
+      "scripthost",
+      "es2017",
+      "esnext",
+      "DOM.Iterable"
+    ],
+    "jsx": "react"
   },
   "include": [
-    "**/*.ts"
+    "**/*.ts",
   ]
 }
