--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-excalibrain",
+	"id": "excalibrain",
 	"name": "ExcaliBrain",
 	"version": "0.0.1",
 	"minAppVersion": "0.14.0",
