--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "obsidian-dataview": "^0.5.9",
-    "obsidian-excalidraw-plugin": "1.6.26-3"
+    "obsidian-excalidraw-plugin": "1.6.26-3",
+    "@popperjs/core": "^2.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
