--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "excalibrain",
-	"version": "0.0.1",
-	"description": "A clean and intuitive graph view for Obsidian",
-	"main": "lib/index.js",
+  "name": "excalibrain",
+  "version": "0.0.1",
+  "description": "A clean and intuitive graph view for Obsidian",
+  "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
     "lib/**/*"
@@ -41,7 +41,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "@excalidraw/eslint-config": "1.0.0",
-    "@excalidraw/prettier-config": "1.0.2"
+    "@excalidraw/prettier-config": "1.0.2",
+    "terser": "5.12.1"
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": "5.3.0"
