--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "obsidian-dataview": "^0.5.9",
-    "@popperjs/core": "^2.11.2"
+    "@popperjs/core": "^2.11.2",
+    "ts-multiselect": "^0.0.10"
   },
   "devDependencies": {
     "obsidian-excalidraw-plugin": "1.6.26-10",
