--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ts-multiselect": "^0.0.10"
   },
   "devDependencies": {
-    "obsidian-excalidraw-plugin": "1.6.26-10",
+    "obsidian-excalidraw-plugin": "1.6.33",
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
