--- a/package.json
+++ b/package.json
@@ -16,33 +16,33 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "obsidian-dataview": "^0.5.38",
-    "@popperjs/core": "^2.11.2"
+    "obsidian-dataview": "^0.5.51",
+    "@popperjs/core": "^2.11.6"
   },
   "devDependencies": {
     "obsidian-excalidraw-plugin": "1.7.11",
-    "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@rollup/plugin-babel": "^5.3.0",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-replace": "^3.0.1",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@types/node": "^15.12.4",
+    "@types/node": "^18.11.9",
     "cross-env": "^7.0.3",
-    "obsidian": "^0.15.3",
-    "rollup": "^2.70.1",
+    "obsidian": "^0.16.3",
+    "rollup": "^2.79.1",
     "rollup-plugin-visualizer": "^5.6.0",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.5",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.0",
     "@excalidraw/eslint-config": "1.0.0",
     "@excalidraw/prettier-config": "1.0.2",
-    "terser": "5.12.1"
+    "terser": "^5.16.0"
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": "5.3.0"
