--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@popperjs/core": "^2.11.6"
   },
   "devDependencies": {
+    "@zsviczian/excalidraw": "0.15.2-obsidian-9",
     "obsidian-excalidraw-plugin": "1.9.9",
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
@@ -31,7 +32,7 @@
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/node": "^18.11.9",
     "cross-env": "^7.0.3",
-    "obsidian": "^1.2.5",
+    "obsidian": "^1.1.1",
     "rollup": "^2.79.1",
     "rollup-plugin-visualizer": "^5.6.0",
     "rollup-plugin-terser": "^7.0.2",
