--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "obsidian-dataview": "^0.5.56",
-    "@popperjs/core": "^2.11.6"
+    "@popperjs/core": "^2.11.6",
+    "obsidian-dataview": "^0.4.21"
   },
   "devDependencies": {
-    "obsidian-excalidraw-plugin": "1.9.9-2",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@excalidraw/eslint-config": "^1.0.3",
+    "@excalidraw/prettier-config": "^1.0.2",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -31,18 +32,17 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/node": "^18.11.18",
     "cross-env": "^7.0.3",
-    "obsidian": "^1.1.1",
-    "rollup": "^2.79.1",
-    "rollup-plugin-visualizer": "^5.6.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "obsidian": "^1.1.1",
+    "obsidian-excalidraw-plugin": "1.9.9-2",
     "prettier": "^2.8.2",
-    "@excalidraw/eslint-config": "^1.0.3",
-    "@excalidraw/prettier-config": "^1.0.2",
-    "terser": "^5.16.0"
+    "rollup": "^2.79.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.6.0",
+    "terser": "^5.16.0",
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.4"
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": "5.3.0"
