--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,6 @@
 	"description": "A clean, intuitive and editable graph view for Obsidian",
 	"author": "Zsolt Viczian",
 	"authorUrl": "https://zsolt.blog",
+	"fundingUrl": "https://ko-fi.com/zsolt",
 	"isDesktopOnly": false
 }
