--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@popperjs/core": "^2.11.6"
   },
   "devDependencies": {
-    "obsidian-excalidraw-plugin": "1.9.9-2",
+    "obsidian-excalidraw-plugin": "1.9.13",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
