correct version for obsidian-excalidraw-plugin

--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/node": "^20.4.8",
+    "@zsviczian/obsidian-excalidraw-plugin": "2.0.0",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
     "obsidian": "^1.4.0",
-    "obsidian-excalidraw-plugin": "2.2.7",
     "prettier": "^2.8.2",
     "rollup": "^2.79.1",
     "terser": "^5.19.2",
