--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "obsidian-dataview": "^0.5.65",
+    "obsidian-dataview": "^0.5.67",
     "@popperjs/core": "^2.11.6"
   },
   "devDependencies": {
-    "obsidian-excalidraw-plugin": "1.9.14",
+    "obsidian-excalidraw-plugin": "^1.9.14",
+    "obsidian": "^1.5.7-1",
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
@@ -31,9 +32,9 @@
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/node": "^20.4.8",
     "cross-env": "^7.0.3",
-    "obsidian": "^1.4.0",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-copy": "^3.5.0",
     "tslib": "^2.6.1",
     "typescript": "^4.9.4",
     "eslint-config-prettier": "^8.10.0",
